🗺️ Complete Sitemap Implementation + Homepage Fix
✨ New Features:
- Complete React/Vite sitemap system with XML generation
- 61 URLs across 4 organized sitemap chunks
- SEO-optimized job categories and location pages
- Static sitemap file generation for production
- Admin panel with sitemap download functionality

🔧 Bug Fixes:
- Fixed homepage loading issue (Admin.tsx import errors)
- Corrected sitemap generator function imports
- Resolved JavaScript module resolution errors

📁 Files Added:
- src/data/sitemap.ts - Sitemap configuration and URL definitions
- src/pages/SitemapIndex.tsx - React sitemap index page
- src/pages/SitemapChunk.tsx - React sitemap chunk page
- scripts/generate-sitemap-simple.js - XML generation script
- SITEMAP_IMPLEMENTATION_GUIDE.md - Complete documentation
- public/sitemap.xml - Generated main sitemap index
- public/robots.txt - Search engine directives
- public/sitemaps/ - Individual sitemap chunks

🎯 SEO Coverage:
- Main Pages: 6 URLs
- Job Categories: 20 URLs
- Locations: 20 URLs
- Category+Location: 20 URLs
- Total: 61 URLs ready for Google Search Console

🚀 Ready for production deployment!

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "npx vite",
-    "build": "npx vite build",
+    "build": "npx vite build && node scripts/generate-sitemap-simple.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "preview": "npx vite preview"
+    "preview": "npx vite preview",
+    "generate-sitemap": "node scripts/generate-sitemap-simple.js"
   },
   "dependencies": {
     "react": "^18.3.1",
