Add PHP static site with employer reviews system
- Convert React app to PHP static site generator
- Add Synaxus employer reviews with structured data
- Implement Tailwind CSS pipeline for PHP views
- Add cache-busting and proper favicon handling
- Create build system for static site generation
- Add employer reviews with 20 verified reviews
- Implement proper spacing and sectioning for reviews

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "npx vite build && node scripts/generate-sitemap-simple.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "preview": "npx vite preview",
-    "generate-sitemap": "node scripts/generate-sitemap-simple.js"
+    "generate-sitemap": "node scripts/generate-sitemap-simple.js",
+    "dev:css": "tailwindcss -i ./css/input.css -o ./php-src/public/assets/styles.css --watch",
+    "build:css": "tailwindcss -i ./css/input.css -o ./php-src/public/assets/styles.css --minify"
   },
   "dependencies": {
     "react": "^18.3.1",
