Fix deployment to build PHP static site instead of React app
- Change build script from React/Vite to PHP static site generation
- Update build script to output to root /dist directory for deployment
- Now builds: npm run build:css && php scripts/build.php
- Copies php-src/dist to root /dist for deployment platform

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "npx vite",
-    "build": "npx vite build && node scripts/generate-sitemap-simple.js",
+    "build": "npm run build:css && php scripts/build.php",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "preview": "npx vite preview",
     "generate-sitemap": "node scripts/generate-sitemap-simple.js",
