Fix Railway build: Add Node.js and npm to nixpacks.toml
- Add nodejs_18 and npm-9_x to nixPkgs
- Fixes 'npm: command not found' error during build
- Railway now has both PHP and Node.js available
- Build should complete successfully with npm ci and npm run build

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["php", "phpPackages.composer"]
+nixPkgs = ["php", "phpPackages.composer", "nodejs_18", "npm-9_x"]
 
 [phases.install]
 cmds = ["npm ci"]
