Fix sitemap.xml for Google Search Console - Generate static XML files
- Created generate-sitemap-with-blog.js script to generate static XML files
- Includes all blog posts in blog sitemap
- Generates files in php-src/public/ and dist/ directories
- PHP routes serve XML files with proper Content-Type headers
- Added prebuild hook to auto-generate sitemaps
- Fixed React sitemap components to handle XML requests

This ensures Google can properly crawl and index the sitemap.xml file.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "cd php-src/public && php -S 0.0.0.0:3000",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "preview": "npx vite preview",
-    "generate-sitemap": "node scripts/generate-sitemap-simple.js",
+    "generate-sitemap": "node scripts/generate-sitemap-with-blog.js",
+    "prebuild": "npm run generate-sitemap",
     "dev:css": "tailwindcss -i ./css/input.css -o ./php-src/public/assets/styles.css --watch",
     "build:css": "tailwindcss -i ./css/input.css -o ./php-src/public/assets/styles.css --minify"
   },
